--- a/src/components/transaction-edit-row/transaction-edit-row.component.html
+++ b/src/components/transaction-edit-row/transaction-edit-row.component.html
@@ -102,7 +102,7 @@
                   [attr.aria-selected]="selectedIndex() === i"
                   role="option">
                   <div class="text-sm font-medium text-gray-900 leading-tight mb-0.5 break-words">
-                    {{ security.securityName }}
+                    {{ security.name }}
                   </div>
                   <div class="text-xs text-gray-500">
                     {{ security.ticker }}
