--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -38,14 +38,14 @@
       <input
         type="text"
         [value]="searchQuery()"
-        (input)="searchQuery.set($any($event.target).value)"
+        (input)="onSearchInput($event)"
         placeholder="Search by ticker or security name..."
         class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-gray-900 focus:border-gray-900 text-sm"
       />
       @if (searchQuery()) {
         <button
           type="button"
-          (click)="searchQuery.set('')"
+          (click)="searchQueryChange.emit('')"
           class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600"
         >
           <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
@@ -62,7 +62,7 @@
     @if (isAdding()) {
       <app-transaction-edit-row (save)="save.emit($event)" (cancel)="cancel.emit()"></app-transaction-edit-row>
     }
-    @for (transaction of filteredTransactions(); track transaction.id) {
+    @for (transaction of transactions(); track transaction.id) {
       @if (isEditing(transaction.id)) {
         <app-transaction-edit-row 
           [initialState]="transaction"
