fix: add security component improvements

--- a/src/components/add-security-search/add-security-search.component.html
+++ b/src/components/add-security-search/add-security-search.component.html
@@ -20,7 +20,10 @@
         *ngFor="let result of results()" 
         class="result-item" 
         (click)="selectSecurity(result.ticker)">
-        <span class="ticker">{{ result.name }} ({{ result.ticker }})</span>
+        <div class="security-info">
+          <span class="ticker">{{ result.ticker }}</span>
+          <span class="company-name">{{ result.name }}</span>
+        </div>
         <span class="add-label">Add</span>
       </div>
     </div>
