--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -17,7 +17,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
             <!-- Tooltip Content -->
-            <div class="absolute top-full right-0 mt-2 w-72 p-4 bg-black text-white text-[11px] normal-case font-normal leading-relaxed rounded shadow-2xl opacity-0 invisible group-hover/tooltip:opacity-100 group-hover/tooltip:visible transition-all z-[100] pointer-events-none">
+            <div class="absolute top-full right-0 mt-2 w-max max-w-[240px] p-4 bg-black text-white text-[11px] normal-case font-normal leading-relaxed rounded shadow-2xl opacity-0 invisible group-hover/tooltip:opacity-100 group-hover/tooltip:visible transition-all z-[100] pointer-events-none">
               <!-- Arrow -->
               <div class="absolute bottom-full right-2 border-8 border-transparent border-b-black"></div>
               <p class="font-bold mb-1 text-white">Your cash is part of your portfolio.</p>
